--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .DS_Store
+/.idea/.gitignore
+/.idea/Cloud-Native-Observability.iml
+/.idea/modules.xml
+/.idea/vcs.xml
+/chapter04/cloud_native_observability/*
